# internal/app/api/usecase/file.go
@@ -5,6 +5,7 @@ import (
 	"file-server/internal/app/api/domain/repository"
 	"file-server/internal/app/api/domain/service"
 	"file-server/internal/app/api/usecase/dto"
+	"file-server/internal/pkg/types"
 	"fmt"
 	"net/http"
 	"strings"
@@ -13,7 +14,7 @@ import (
 )
 
 type FileUsecase interface {
-	Create(uint64, string, bool, []byte) (*dto.FileDTO, error)
+	Create(uint64, bool, []types.File) ([]dto.FileDTO, error)
 	Update(uint64, string, bool, bool) (*dto.FileDTO, error)
 	Remove(uint64, bool) error
 	Move(uint64, uint64, bool) (*dto.FileDTO, error)
@@ -38,41 +39,43 @@ func NewFileUsecase(db *gorm.DB, fileInfoRepository repository.FileInfoRepositor
 	}
 }
 
-func (fu *fileUsecase) Create(folderID uint64, name string, isHide bool, body []byte) (*dto.FileDTO, error) {
-	var fileInfo *entity.FileInfo
+func (fu *fileUsecase) Create(folderID uint64, isHide bool, files []types.File) ([]dto.FileDTO, error) {
+	fileInfos := make([]entity.FileInfo, len(files))
 	if err := fu.db.Transaction(func(tx *gorm.DB) error {
 		parentFolder, err := fu.folderInfoRepository.FindOneByID(tx, folderID)
 		if err != nil {
 			return err
 		}
 
-		path := parentFolder.GetPath() + name
-		mimeType := http.DetectContentType(body)
+		for i, file := range files {
+			path := parentFolder.GetPath() + file.Name
+			mimeType := http.DetectContentType(file.Body)
 
-		fileInfo, err = entity.NewFileInfo(folderID, name, path, mimeType, isHide)
-		if err != nil {
-			return err
+			fileInfo, err := entity.NewFileInfo(folderID, file.Name, path, mimeType, isHide)
+			if err != nil {
+				return err
+			}
+			fileInfos[i] = *fileInfo
+
+			if isExists, err := fu.fileInfoService.IsExists(tx, fileInfo); err != nil {
+				return err
+			} else if isExists {
+				return fmt.Errorf("%s is already exists", fileInfo.GetPath())
+			}
+
+			fileBody := entity.NewFileBody(path, file.Body)
+			if err := fu.fileBodyRepository.Create(fileBody); err != nil {
+				return err
+			}
 		}
 
-		if isExists, err := fu.fileInfoService.IsExists(tx, fileInfo); err != nil {
-			return err
-		} else if isExists {
-			return fmt.Errorf("%s is already exists", fileInfo.GetPath())
-		}
-
-		fileInfo, err = fu.fileInfoRepository.Create(tx, fileInfo)
-		if err != nil {
-			return err
-		}
-
-		fileBody := entity.NewFileBody(path, body)
-
-		return fu.fileBodyRepository.Create(fileBody)
+		fileInfos, err = fu.fileInfoRepository.Creates(tx, fileInfos)
+		return err
 	}); err != nil {
 		return nil, err
 	}
 
-	return fu.entityToDTO(fileInfo), nil
+	return fu.entitiesToDTOs(fileInfos), nil
 }
 
 func (fu *fileUsecase) Update(id uint64, name string, isHide bool, isDisplayHiddenObject bool) (*dto.FileDTO, error) {
@@ -242,4 +245,13 @@ func (fu *fileUsecase) entityToDTO(file *entity.FileInfo) *dto.FileDTO {
 		CreatedAt: file.GetCreatedAt(),
 		UpdatedAt: file.GetUpdatedAt(),
 	}
+}
+
+func (fu *fileUsecase) entitiesToDTOs(files []entity.FileInfo) []dto.FileDTO {
+	dtos := make([]dto.FileDTO, len(files))
+	for i, file := range files {
+		f := fu.entityToDTO(&file)
+		dtos[i] = *f
+	}
+	return dtos
 }
